# ChangeLog for dev-perl/Lingua-Preferred
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lingua-Preferred/ChangeLog,v 1.16 2007/01/16 01:15:29 mcummings Exp $

  16 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -Lingua-Preferred-0.2.1.ebuild, -Lingua-Preferred-0.2.2.ebuild,
  Lingua-Preferred-0.2.4.ebuild:
  Ebuild maintenance

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Lingua-Preferred-0.2.1.ebuild, Lingua-Preferred-0.2.2.ebuild,
  Lingua-Preferred-0.2.4.ebuild:
  Adding perl dep; fixed DEPEND

  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
  Lingua-Preferred-0.2.1.ebuild, Lingua-Preferred-0.2.2.ebuild,
  Lingua-Preferred-0.2.4.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed DEPEND

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Lingua-Preferred-0.2.4.ebuild:
  SRC_URI fix

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  Lingua-Preferred-0.2.4.ebuild:
  Mark 0.2.4 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  Lingua-Preferred-0.2.4.ebuild:
  add ~ia64

  07 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  Lingua-Preferred-0.2.4.ebuild:
  Stable on ppc.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  15 Jul 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  Lingua-Preferred-0.2.4.ebuild:
  Sparc stable

  13 Jul 2004; Robert Coie <rac@gentoo.org> Lingua-Preferred-0.2.4.ebuild:
  Keywording amd64 and x86

  26 May 2004; Bryan Østergaard <kloeri@gentoo.org>
  Lingua-Preferred-0.2.4.ebuild:
  Stable on alpha.

  20 Jan 2004; <gustavoz@gentoo.org> Lingua-Preferred-0.2.2.ebuild:
  stable on sparc

*Lingua-Preferred-0.2.4 (15 Jan 2004)

  15 Jan 2004; Eric Sammer <esammer@gentoo.org> Lingua-Preferred-0.2.1.ebuild,
  Lingua-Preferred-0.2.2.ebuild, Lingua-Preferred-0.2.4.ebuild:
  Updated copyright headers. Bumped version - closes bug 37597

*Lingua-Preferred-0.2.2 (16 Jun 2003)
