@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Lingua-Preferred
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lingua-Preferred/ChangeLog,v 1.16 2007/01/16 01:15:29 mcummings Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lingua-Preferred/ChangeLog,v 1.17 2010/02/04 14:16:55 tove Exp $
+
+  04 Feb 2010; Torsten Veller <tove@gentoo.org>
+  Lingua-Preferred-0.2.4.ebuild:
+  Fix LICENSE (#301969). Maintenance
 
   16 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   -Lingua-Preferred-0.2.1.ebuild, -Lingua-Preferred-0.2.2.ebuild,
